CELDEV-1157 - add new AddDefaultGroupsToNewUserListener (#355)
* initial commit

* change addUserToDefaultGroups to public and return a boolean

* rename the Listener and finish it

* initial commit for testing the new listener

* update variables in Logger entry

* adds tests that don't work yet

* several changes

* refactoring

* change from DocumentEvent to ObjectEvent

* change ExceptionHandling in createNewUser

* adjust test_createNewUser() in CelementsUserService

* refactoring

* add Test for case groupDoc cannot be saved

* change test naming according to naming convention

* change logging to warning in case of a UserInstantiationException

* add another expect to test_onEventInternal_groupDocCannotBeSaved()

* delete unnecessary expectLastCall